# l476-rs

./: Cargo.toml  README.md  load.sh  memory.x  openocd.cfg
src/: main.rs
vscode/: launch.json
