[package]
authors = ["motii"]
edition = "2018"
readme = "README.md"
name = "l476-rs"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
stm32l4xx-hal = { version = "0.7", features = ["stm32l476", "rt"] }
panic-itm = "0.4.1"
embedded-alloc = "0.6.0"

[[bin]]
name = "l476-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
